[package]
name = "nodetree-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }

async-trait = { workspace = true }

chrono = { workspace = true, features = ["serde"]}
