[package]
name = "nodetree-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
tokio-postgres = { version = "0.7", optional = true, features = [
    "with-chrono-0_4",
] }
postgres-types = { version = "0.2", optional = true }
deadpool-postgres = { version = "0.12.1", optional = true }

deadpool-sqlite = { version = "0.7.0", optional = true }

tokio = "1.36"
bytes = { version = "1.5", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }


serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }

async-trait = { workspace = true }

uuid = { workspace = true }

distance = "0.4.0"
regex = "1.10.4"


[features]
default = ["postgres", "sqlite"]
postgres = ["tokio-postgres", "postgres-types", "deadpool-postgres", "bytes"]
sqlite = ["deadpool-sqlite"]
