[package]
name = "nodetree-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true }
deadpool-postgres = { version = "0.12", optional = true }

deadpool-sqlite = { version = "0.7.0", optional = true }

tokio = "1.36"

ntcore = { package = "nodetree-core", path = "../nodetree-core" }

serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1.77"

tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["postgres", "sqlite"]
postgres = ["tokio-postgres", "postgres-types", "deadpool-postgres"]
sqlite = ["deadpool-sqlite"]
