[package]
name = "nodetree-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", optional = true }
postgres-types = { version = "0.2", optional = true }
deadpool-postgres = { version = "0.12", optional = true }

deadpool-sqlite = { version = "0.7.0", optional = true }

tokio = "1.36"

ntcore = { package = "nodetree-core", path = "../nodetree-core" }

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }

async-trait = { workspace = true }

[features]
default = ["postgres", "sqlite"]
postgres = ["tokio-postgres", "postgres-types", "deadpool-postgres"]
sqlite = ["deadpool-sqlite"]
