[package]
name = "nodetree-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio-postgres = "0.7"
postgres-types = "0.2"

axum = "0.7"

serde = "1.0"

ntcore = { path = "../nodetree-core"}