[package]
name = "nodetree-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

axum = "0.7"

clap = { version = "4.4.10", features = ["derive"] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }

ntcore = { package = "nodetree-core", path = "../nodetree-core" }
ntmapper = { package = "nodetree-mapper", path = "../nodetree-mapper" }

toml = "0.8.10"
once_cell = "*"